# ROGAlly-CachyOS-CC-Menu

./: .gitignore  99-rog-ally-menu.rules  CMakeLists.txt  PKGBUILD  README.md  com.rogallymenu.pkexec.policy  configure-cc-button.sh  install.sh  rog-ally-menu-helper  rog-ally-menu.service  uninstall.sh
qml/: Main.qml
src/: backend.cpp  backend.h  main.cpp
